@@ -1,3 +1,9 @@
+2016-08-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+	    Gregory Vanuxem  <g.vanuxem@wanadoo.fr>
+
+	* confugure.ac, Makefile.in: Remove problematic test
+	for absolute path
+
 2016-08-26  Qian Yun  <oldk1331@gmail.com>
 
 	* src/algebra/seg.spad: Add plus and minus for SegmentCategory
